overall style fixes

--- a/themes/tent/sass/_mixins.scss
+++ b/themes/tent/sass/_mixins.scss
@@ -51,6 +51,14 @@
   margin: 0;
 }
 
+@mixin reset-list--no-pad {
+  &,
+  ul,
+  ol {
+    padding-left: 0;
+  }
+}
+
 @mixin center-block {
   display: block;
   margin-left: auto;
