--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -1,3 +1,5 @@
+// TODO: rename?
+
 // Structure
 $base__space-unit: 1.5rem;
 $max-width: 1120px;
@@ -10,6 +12,7 @@ $color__text--muted: #a1a1a1;
 $color__background-body: #fff;
 $color__link: $color__brand;
 $color__link-hover: darken($color__brand, 10%);
+$color__link-hover--secondary: #f0e4d1; // yellow
 
 // Borders
 $color__border: #e1e1e1;
