--- a/themes/tent/sass/components/_adventures-thumbnail.scss
+++ b/themes/tent/sass/components/_adventures-thumbnail.scss
@@ -28,6 +28,18 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+
+  .entry__title {
+    @include font-size(1.5);
+  }
+
+  &:first-child .entry__title {
+    @include font-size(2.3);
+  }
+
+  &:nth-child(2) .entry__title {
+    @include font-size(2);
+  }
 }
 
 .adventures-thumbnail__header {
@@ -52,6 +64,10 @@
   &,
   &:visited {
     color: $color__background-body;
+  }
+
+  &:hover {
+    color: $color__link-hover--secondary;
   }
 }
 
