--- a/themes/tent/sass/components/_entry.scss
+++ b/themes/tent/sass/components/_entry.scss
@@ -28,7 +28,6 @@
 
 .entry__title--serif {
   font-family: $font__main;
-  @include font-size(2.3);
   font-weight: 400;
   line-height: 1.2;
 }
@@ -107,9 +106,15 @@
 }
 
 .entry__links {
-  max-width: 475px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  > * {
+    white-space: nowrap;
+
+    &:not(:last-child) {
+      margin-right: $base__space-unit;
+    }
+  }
 }
 
 .entry__actions {
