style search page

--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -21,6 +21,7 @@ $color__border--dark: #c8c8c8;
 // Buttons
 $button--primary: #000;
 $button--secondary: $color__brand;
+$button--disabled: #808080;
 
 // Fields
 $field__bg: #f4f4f4;
