--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -42,6 +42,7 @@ Tags:
 @import "components/widget";
 @import "components/sidebar";
 @import "components/comments";
+@import "components/search";
 @import "components/search-form";
 @import "components/shop-thumbnail";
 @import "components/blog-thumbnail";
