style business hours

--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -39,7 +39,6 @@ Tags:
 @import "components/entry";
 @import "components/button";
 @import "components/input";
-@import "components/widget";
 @import "components/sidebar";
 @import "components/comments";
 @import "components/search";
@@ -48,3 +47,4 @@ Tags:
 @import "components/blog-thumbnail";
 @import "components/adventures-thumbnail";
 @import "components/contact-form";
+@import "components/business-hours";
