init contact info widget

--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -48,3 +48,4 @@ Tags:
 @import "components/adventures-thumbnail";
 @import "components/contact-form";
 @import "components/business-hours";
+@import "components/contact-info";
