fix responsive margins and widths

--- a/themes/tent/sass/components/_adventures-thumbnail.scss
+++ b/themes/tent/sass/components/_adventures-thumbnail.scss
@@ -15,30 +15,51 @@
 
   display: grid;
   grid-template-areas:
-    "a1 a2 a2"
-    "a1 a3 a4";
-  grid-template-rows: 50% 50%;
-  grid-template-columns: 50% 25% 25%;
+    "a1"
+    "a2"
+    "a3"
+    "a4";
+  grid-auto-rows: 1fr;
+  grid-auto-columns: 1fr;
   grid-gap: $base__space-unit/2;
-  height: 550px;
   overflow: hidden;
+
+  @include tablet {
+    height: 550px;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 50% 25% 25%;
+    grid-template-areas:
+      "a1 a2 a2"
+      "a1 a3 a4";
+  }
 }
 
 .adventures-thumbnail {
   position: relative;
   width: 100%;
   overflow: hidden;
+  min-height: 340px;
+
+  @include tablet {
+    min-height: unset;
+  }
 
   .entry__title {
-    @include font-size(1.5);
-  }
-
-  &:first-child .entry__title {
-    @include font-size(2.3);
-  }
-
-  &:nth-child(2) .entry__title {
     @include font-size(2);
+  }
+
+  @include tablet {
+    .entry__title {
+      @include font-size(1.5);
+    }
+
+    &:first-child .entry__title {
+      @include font-size(2.3);
+    }
+
+    &:nth-child(2) .entry__title {
+      @include font-size(2);
+    }
   }
 }
 
@@ -60,6 +81,7 @@
 
 .adventures-thumbnail__link {
   display: block;
+  width: 90%;
 
   &,
   &:visited {
