--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -3,6 +3,8 @@
 // Structure
 $base__space-unit: 1.5rem;
 $max-width: 1120px;
+$max-width--desktop: 1010px;
+$max-width--tablet: 700px;
 
 // Colors
 $color__brand: #248a83; // green
