--- a/themes/tent/sass/components/_contact-form.scss
+++ b/themes/tent/sass/components/_contact-form.scss
@@ -6,6 +6,7 @@
 .wpcf7-form {
   font-family: $font__title;
   text-transform: uppercase;
+  padding: 0 $base__space-unit;
 
   i {
     color: $color__secondary;
@@ -18,6 +19,10 @@
 
   textarea {
     @include input-full;
+  }
+
+  @include desktop {
+    padding: 0;
   }
 }
 
