style expandable search

--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -1,5 +1,3 @@
-// TODO: rename?
-
 // Structure
 $base__space-unit: 1.5rem;
 $max-width: 1120px;
@@ -32,3 +30,6 @@ $field__bg: #f4f4f4;
 $font__main: "Merriweather Web", serif;
 $font__title: "Novecento Sans Web", sans-serif;
 $font__line-height-body: 1.75;
+
+// Transitions
+$transition-dur: 0.8s;
