minor style tweaks

--- a/themes/tent/sass/components/_comments.scss
+++ b/themes/tent/sass/components/_comments.scss
@@ -37,8 +37,8 @@
   }
 }
 
-.comment-content {
-  padding-left: $base__space-unit;
+.comments__content {
+  padding-left: $base__space-unit/2;
 }
 
 .comments__label,
