style adventures archive

--- a/themes/tent/sass/components/_adventures-thumbnail.scss
+++ b/themes/tent/sass/components/_adventures-thumbnail.scss
@@ -47,7 +47,9 @@
   .entry__title {
     @include font-size(2);
   }
+}
 
+.adventures-thumbnail--small {
   @include tablet {
     .entry__title {
       @include font-size(1.5);
