--- a/themes/tent/sass/style.scss
+++ b/themes/tent/sass/style.scss
@@ -48,6 +48,7 @@ Tags:
 @import "components/shop-thumbnail";
 @import "components/blog-thumbnail";
 @import "components/adventures-thumbnail";
+@import "components/adventures";
 @import "components/contact-form";
 @import "components/business-hours";
 @import "components/contact-info";
