remove nav toggle

--- a/themes/tent/sass/components/_sidebar.scss
+++ b/themes/tent/sass/components/_sidebar.scss
@@ -9,6 +9,11 @@
   min-width: 300px;
   padding: $base__space-unit;
   border-left: 1px solid $color__border;
+  margin-bottom: $base__space-unit * 2;
+
+  @include tablet {
+    margin-bottom: 0;
+  }
 
   @include desktop {
     padding: $base__space-unit $base__space-unit * 2 $base__space-unit * 2
