--- a/themes/tent/sass/_variables.scss
+++ b/themes/tent/sass/_variables.scss
@@ -12,7 +12,7 @@ $color__text-main: #404040;
 $color__text--muted: #a1a1a1;
 $color__background-body: #fff;
 $color__link: $color__brand;
-$color__link-hover: darken($color__brand, 10%);
+$color__link-hover: #2f1339; // purple
 $color__link-hover--secondary: #f0e4d1; // yellow
 
 // Borders
