uppercase post meta

--- a/themes/tent/sass/components/_entry.scss
+++ b/themes/tent/sass/components/_entry.scss
@@ -99,6 +99,8 @@
 }
 
 .entry__meta--float {
+  font-family: $font__title;
+  text-transform: uppercase;
   background-color: $color__brand;
   padding: $base__space-unit/2;
 
